@@ -11,6 +11,9 @@ Silva changes
         reason the session gets lost, that no longer results in an
         error.
 
+      - 185422: Javascript prompt to save changes in kupu when
+        leaving the editor wasn't working
+
       Ported from 1.6 branch:
 
       - Reversal of fix for issue
